# study

./: .gitignore  .gitmodules  README.md
content/.NET/lab1/: lab1.sln
content/.NET/lab2/: lab2.csproj  lab2.sln
content/.NET/lab3/: lab3.csproj
content/.NET/lab4/: lab4.sln
content/.NET/lab5/: lab5.sln
content/.NET/lab6/: App.axaml  App.axaml.cs  MainWindow.axaml.cs  Program.cs  app.manifest  lab6.csproj  lab6.sln
content/CG/lab2_4/: settings.gradle.kts
content/Course/diploma/: README.md  go.mod  go.sum  graph.dot  main.go
content/Course/knapsack_problem/: pom.xml
content/Course/playstore/: package.json
content/Course/quotonia/: settings.gradle.kts
content/Course/udptransport/: pom.xml
content/Course/webtaxifleet/: HELP.md  README.md  pom.xml
content/DDS/lab1/: Dockerfile  package.json
content/DDS/lab2/: README.md  docker-compose.yml
content/DP/lab1/: pom.xml
content/DP/lab2/: pom.xml
content/DP/lab3/: build.gradle.kts  pom.xml
content/DP/lab5/: build.gradle.kts  settings.gradle.kts
content/DP/lab8/: settings.gradle.kts
content/FP/lab1/: build.sbt
content/HMaA/lab3/: pom.xml
content/HMaA/lab4/: build.gradle.kts  settings.gradle.kts
content/HMaA/lab5/: build.gradle.kts  settings.gradle.kts
content/HMaA/lab6/: build.gradle.kts  (+1 more)
content/PDPB/lab5/: CMakeLists.txt
content/PDPB/lab5/include/demo/: integration_demo.hpp
content/PDPB/lab5/include/math/: integration.hpp
content/PDPB/lab5/include/utils/: print_info.hpp  timer.hpp
content/PDPB/lab5/src/: main.cpp
content/PDPB/lab5/src/demo/: integration_demo.cpp
content/PDPB/lab5/src/math/: integration.cpp
content/PDPB/lab5/src/utils/: print_info.cpp  timer.cpp
(+1004 files in other folders)
